--- a/assets/css/todos.css
+++ b/assets/css/todos.css
@@ -8,6 +8,16 @@ h1{
   font-weight: normal;
 }
 
+.fa-plus{
+  float: right;
+}
+
+body{
+  background: rgba(0, 0, 0, 0)
+  linear-gradient(to right, rgb(28, 146, 210),
+  rgb(242, 252, 254)) repeat scroll 0% 0%;
+}
+
 ul {
   list-style: none;
   margin: 0;
@@ -29,18 +39,36 @@ li:nth-child(2n){
   background: #f7f7f7;
 }
 
+span {
+  background: #e74c3c;
+  height: 40px;
+  margin-right: 20px;
+  text-align: center;
+  color: white;
+  width: 0px;
+  display: inline-block;
+  transition: 0.2s linear;
+  opacity: 0;
+}
+
+li:hover span {
+  width: 40px;
+  opacity: 1.0;
+}
+
 input{
   font-size: 18px;
+  color: #2980b9;
   background-color: #f7f7f7;
   width: 100%;
   padding: 13px 13px 13px 20px;
   box-sizing: border-box;
-  color: #2980b9;
+  border: 3px solid rgba(0,0,0,0);
 }
 
 input:focus{
   background: #fff;
-  border:3px solid #2980b9;
+  border: 3px solid #2980b9;
   outline: none;
 }
 
